[tool.poetry]
name = "gis-utils"
version = "0.1.0"
description = ""
authors = ["Kazybek Askarbek <k.askarbek@innopolis.university>"]
readme = "README.md"
packages = [{include = "gis_utils"}]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.1"
fire = "^0.5.0"
pydantic = "^1.10.4"
rasterio = "^1.3.4"
torch = "^1.13.1"
numpy = "^1.24.1"
pytorch-toolbelt = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
